--- a/Blades.Web/app/components/home/components/home.component.html
+++ b/Blades.Web/app/components/home/components/home.component.html
@@ -1,5 +1,8 @@
 ﻿<div class="container-fluid">
 
+
+    <ngb-alert type="warning">Warning</ngb-alert>
+
     <h1>{{message}}</h1>
 
     <div class="row">
