--- a/Blades.Web/app/components/shared/components/navigation/topnavigation.component.html
+++ b/Blades.Web/app/components/shared/components/navigation/topnavigation.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+<!--<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                     aria-controls="navbar">
@@ -25,4 +25,15 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav>-->
+
+<div class="coreui-topbar">
+    <div class="coreui-topbar-title">Blades Web</div>
+    <div class="coreui-topbar-navbar">
+        <ul id="top-nav" class="nav navbar-nav">
+            <li><a [routerLink]="['/home']">Home</a></li>
+            <li><a [routerLink]="['/admin']">Admin</a></li>
+        </ul>
+    </div>
+    <div class="coreui-topbar-user"><span data-bind="text: userName"></span> <i class="fa fa-user"></i> Admir Durmishi</div>
+</div>
