--- a/Blades.Web/app/components/blades/components/blade-nav.component.html
+++ b/Blades.Web/app/components/blades/components/blade-nav.component.html
@@ -1,50 +1,19 @@
- <div class="coreui-sidebar coreui-sidebar-is-collapsed">
+<div class="coreui-sidebar coreui-sidebar-is-collapsed">
     <div class="coreui-sidebar-bar">
         <button class="coreui-sidebar-collapse-button" title="Open menu">
             <i class="fa fa-bars fa-fw fa-lg"></i>
         </button>
-        
-        
-        
-        <ul class="coreui-sidebar-favourites" >
+
+        <ul class="coreui-sidebar-favourites">
             <li *ngFor="let blade of blades">
-                {{blade.name}}
+                <a href="#" title=" {{blade.title}}" [routerLink]="['/blade', blade.name]">
+                    <div class="coreui-sidebar-icon"><i class="{{blade.class}}"></i></div>
+                    <div class="coreui-sidebar-label">
+                        <span [innerHtml]="blade.title"></span>
+                    </div>
+                </a>
             </li>
         </ul>
 
-
-            <!--<ul class="coreui-sidebar-favourites" *ngFor="let blade in blades">
-            <li>
-                <a href="#" title="Dashboard" data-bind="click: function() { alert('test') }">
-                    <div class="coreui-sidebar-icon"><i class="fa fa-home fa-fw fa-lg"></i></div>
-                    <div class="coreui-sidebar-label">Dashboard</div>
-                </a>
-            </li>
-            <li>
-                <a href="#" title="Explore" data-bind="click: addBlade.bind($data, 'Explore', '', 'blade-size-medium', 'blank.html', [])">
-                    <div class="coreui-sidebar-icon"><i class="fa fa-search fa-fw fa-lg"></i></div>
-                    <div class="coreui-sidebar-label">Explore</div>
-                </a>
-            </li>
-            <li>
-                <a href="#" title="Visualize" data-bind="click: addBlade.bind($data, 'Visualize', 'My resources', 'blade-size-small', 'blank.html', [])">
-                    <div class="coreui-sidebar-icon"><i class="fa fa-sitemap fa-fw fa-lg"></i></div>
-                    <div class="coreui-sidebar-label">Visualize</div>
-                </a>
-            </li>
-            <li>
-                <a href="#" title="Settings" data-bind="click: addBlade.bind($data, 'Settings', '', 'blade-size-small', 'settings.html', [])">
-                    <div class="coreui-sidebar-icon"><i class="fa fa-cogs fa-fw fa-lg"></i></div>
-                    <div class="coreui-sidebar-label">Settings</div>
-                </a>
-            </li>
-            <li>
-                <a href="#" title="More applications" data-bind="click: addBlade.bind($data, 'More applications', '', 'blade-size-small', 'applications.html', [])">
-                    <div class="coreui-sidebar-icon"><i class="fa fa-ellipsis-h fa-fw fa-lg"></i></div>
-                    <div class="coreui-sidebar-label">More applications</div>
-                </a>
-            </li>
-        </ul>-->
-
-</div>
+    </div>
 </div>
