--- a/Blades.Web/app/components/home/components/home.component.html
+++ b/Blades.Web/app/components/home/components/home.component.html
@@ -2,7 +2,7 @@
     <main-nav></main-nav>
 
     <div class="coreui-portal-main">
-        <!--<blade-nav class="coreui-sidebar coreui-sidebar-is-collapsed"></blade-nav>-->
+        <blade-nav class="coreui-sidebar coreui-sidebar-is-collapsed"></blade-nav>
 
         <div class="coreui-portal-content">
            
