--- a/Blades.Web/app/style/app.css
+++ b/Blades.Web/app/style/app.css
@@ -326,6 +326,15 @@ body, p {
 .blade-content {
 }
 
+.blade_full_screen {
+    z-index: 9999; 
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+}
+
 .coreui-blade-list {
     margin: 12px -20px 12px -20px;
     padding: 0;
