--- a/Blades.Web/Views/Shared/_DesignerLayout.cshtml
+++ b/Blades.Web/Views/Shared/_DesignerLayout.cshtml
@@ -8,7 +8,7 @@
 
     <base href="/" />
     <link rel="stylesheet" href="~/node_modules/bootstrap/dist/css/bootstrap.css" asp-append-version="true" />
-    <link href="~/app.css" rel="stylesheet" />
+    <link href="~/app/app.css" rel="stylesheet" />
 </head>
 <body class="loaded coreui-theme-blue">
     <div class="coreui-portal">
