--- a/Blades.Web/app/components/blade/components/blade-details.component.html
+++ b/Blades.Web/app/components/blade/components/blade-details.component.html
@@ -30,40 +30,36 @@
                             </div>
                         </div>
                         <div class="blade-content-wrapper" style="padding: 15px">
-                            
+
                             <div class="row" *ngIf="blade.bladeLayout==1">
                                 <div class="col-md-12">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
+
+                                    <blade-form></blade-form>
                                 </div>
                             </div>
 
                             <div class="row" *ngIf="blade.bladeLayout==2">
                                 <div class="col-md-6">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
                                 </div>
 
                                 <div class="col-md-6">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
                                 </div>
                             </div>
 
                             <div class="row" *ngIf="blade.bladeLayout==3">
                                 <div class="col-md-4">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
                                 </div>
 
                                 <div class="col-md-4">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
                                 </div>
 
                                 <div class="col-md-4">
-                                    //data-bind="dynamicHtml: content"
-                                    {{blade.title}}
+                                    //data-bind="dynamicHtml: content" {{blade.title}}
                                 </div>
                             </div>
 
