add dropdown picker single

--- a/Blades.Web/app/components/blade/components/blade-details.component.html
+++ b/Blades.Web/app/components/blade/components/blade-details.component.html
@@ -36,6 +36,9 @@
                                     //data-bind="dynamicHtml: content" {{blade.title}}
 
                                     <blade-form></blade-form>
+
+                                    <dropdown-picker-single></dropdown-picker-single>
+
                                 </div>
                             </div>
 
