add blade forms service

--- a/Blades.Web/app/components/blade/components/blade-details.component.html
+++ b/Blades.Web/app/components/blade/components/blade-details.component.html
@@ -35,9 +35,9 @@
                                 <div class="col-md-12">
                                     //data-bind="dynamicHtml: content" {{blade.title}}
 
-                                    <blade-form></blade-form>
+                                    <blade-form [formId]="123"></blade-form>
 
-                                    <dropdown-picker-single></dropdown-picker-single>
+                                    <!--<dropdown-picker-single></dropdown-picker-single>
 
 
 
@@ -45,7 +45,7 @@
 <form [formGroup]="myForm" (ngSubmit)="submit()">
   <app-switch formControlName="mySwitch" [label]="'My Switch'"></app-switch>
   <button>Submit</button>
-</form>
+</form>-->
 
 
                                 </div>
