--- a/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
+++ b/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
@@ -1,6 +1,5 @@
-<form>
-    blade form
-    <label>label</label>
-    <input type="text" />
-
+<h3>{{_bladeForm.Title}}</h3>
+<form [formGroup]="_formGroup" (ngSubmit)="submit()">
+    
+    
 </form>
