add dynamic forms rendering

--- a/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
+++ b/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
@@ -3,3 +3,12 @@
     
     
 </form>
+
+
+
+<div>
+  check/uncheck to use INPUT vs TEXTAREA:
+  <input type="checkbox" #val (click)="refreshContent(val.checked)" /><hr />
+  <div #dynamicContentPlaceHolder></div>  <hr />
+  entity: <pre>{{entity | json}}</pre>
+</div>
