--- a/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
+++ b/Blades.Web/app/components/forms/components/blade-form/blade-form.component.html
@@ -1,14 +1,1 @@
-<h3>{{_bladeForm.Title}}</h3>
-<form [formGroup]="_formGroup" (ngSubmit)="submit()">
-    
-    
-</form>
-
-
-
-<div>
-  check/uncheck to use INPUT vs TEXTAREA:
-  <input type="checkbox" #val (click)="refreshContent(val.checked)" /><hr />
-  <div #dynamicContentPlaceHolder></div>  <hr />
-  entity: <pre>{{entity | json}}</pre>
-</div>
+<div #dynamicBladeFormPlaceHolder></div>
