--- a/Blades.Web/app/components/home/components/home.component.html
+++ b/Blades.Web/app/components/home/components/home.component.html
@@ -5,15 +5,42 @@
         <blade-nav class="coreui-sidebar coreui-sidebar-is-collapsed"></blade-nav>
 
         <div class="coreui-portal-content">
-           
-            <div class="container-fluid">
 
+            <ngb-alert type="warning">Dashboard content will goes here...</ngb-alert>
 
-                <ngb-alert type="warning">Dashboard content will goes here...</ngb-alert>
+            <gridster [options]="gridsterOptions" [draggableOptions]="gridsterDraggableOptions" (gridsterPositionChange)="logChanges($event)" (resize)="resize($event)" #gridster style="min-height: 500px;">
 
-              
+                <gridster-item class="gridster-item" *ngFor="let widget of widgets; let indx = index" [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h">
 
-            </div>
+                    <div class="panel-heading">
+                        <h5 class="panel-title">{{ widget.title }}</h5>
+                    </div>
+
+                    <div class="panel-body">
+                        <p>
+                            <label>
+                        <input type="checkbox" [(ngModel)]="widget.dragAndDrop" value="true"> Draggable
+                    </label>
+                            <label>
+                        <input type="checkbox" [(ngModel)]="widget.resizable" value="true"> Resizable
+                    </label>
+                            <button (click)="setWidth(widget, widget.w+1, $event)">width +</button>
+                            <button (click)="setWidth(widget, widget.w-1, $event)">width -</button>
+                            <button (click)="setHeight(widget, widget.h+1, $event)">height +</button>
+                            <button (click)="setHeight(widget, widget.h-1, $event)">height -</button>
+                        </p>
+                        <p>
+                            <button (click)="remove($event, indx,gridster)">remove</button>
+                        </p>
+                        <p>
+                            Position: {{widget.x}} x {{widget.y}}<br> Size: {{widget.w}} x {{widget.h}}
+                        </p>
+                        <p>{{ widget.content }}</p>
+                    </div>
+
+                </gridster-item>
+
+            </gridster>
 
         </div>
     </div>
