--- a/Blades.Web/app/components/home/components/home.component.html
+++ b/Blades.Web/app/components/home/components/home.component.html
@@ -8,38 +8,29 @@
 
             <ngb-alert type="warning">Dashboard content will goes here...</ngb-alert>
 
-            <gridster [options]="gridsterOptions" [draggableOptions]="gridsterDraggableOptions" (gridsterPositionChange)="logChanges($event)" (resize)="resize($event)" #gridster style="min-height: 500px;">
-
-                <gridster-item class="gridster-item" *ngFor="let widget of widgets; let indx = index" [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h">
-
-                    <div class="panel-heading">
-                        <h5 class="panel-title">{{ widget.title }}</h5>
+            <gridster class="gridster" [options]="options">
+                <gridster-item [item]="item" *ngFor="let item of dashboard">
+                    <div class="button-holder">
+                        <div class="gridster-item-content" *ngIf="item.hasContent">
+                            <div class="stuff">
+                                Some content to select and click without dragging the widget
+                            </div>
+                        </div>
+                        <div class="item-buttons" *ngIf="item.hasContent">
+                            <button class="drag-handler">
+          <!--<md-icon>open_with</md-icon>-->
+        open_with
+        </button>
+                            <button class="remove-button" (click)="removeItem($event, item)" (touchstart)="removeItem($event, item)" mdTooltip="Remove">
+          <!--<md-icon>clear</md-icon>-->clear
+        </button>
+                        </div>
+                        <label *ngIf="!item.hasContent">{{item.label}}</label>
+                        <button md-mini-fab *ngIf="!item.hasContent" (click)="removeItem($event, item)" (touchstart)="removeItem($event, item)" mdTooltip="Remove">
+        <!--<md-icon>clear</md-icon>-->remove
+      </button>
                     </div>
-
-                    <div class="panel-body">
-                        <p>
-                            <label>
-                        <input type="checkbox" [(ngModel)]="widget.dragAndDrop" value="true"> Draggable
-                    </label>
-                            <label>
-                        <input type="checkbox" [(ngModel)]="widget.resizable" value="true"> Resizable
-                    </label>
-                            <button (click)="setWidth(widget, widget.w+1, $event)">width +</button>
-                            <button (click)="setWidth(widget, widget.w-1, $event)">width -</button>
-                            <button (click)="setHeight(widget, widget.h+1, $event)">height +</button>
-                            <button (click)="setHeight(widget, widget.h-1, $event)">height -</button>
-                        </p>
-                        <p>
-                            <button (click)="remove($event, indx,gridster)">remove</button>
-                        </p>
-                        <p>
-                            Position: {{widget.x}} x {{widget.y}}<br> Size: {{widget.w}} x {{widget.h}}
-                        </p>
-                        <p>{{ widget.content }}</p>
-                    </div>
-
                 </gridster-item>
-
             </gridster>
 
         </div>
