add devextreme support

--- a/Blades.Web/ClientApp/app/components/home/components/home.component.html
+++ b/Blades.Web/ClientApp/app/components/home/components/home.component.html
@@ -8,6 +8,9 @@
 
             <ngb-alert type="warning">Dashboard content will goes here...</ngb-alert>
 
+            <dx-button text="Press me" ></dx-button>
+            <dx-button text="Press me" ></dx-button>
+
             <gridster class="gridster" [options]="options">
                 <gridster-item [item]="item" *ngFor="let item of dashboard">
                     <div class="button-holder">
