--- a/Blades.Web/ClientApp/app/components/designer/components/designer.component.html
+++ b/Blades.Web/ClientApp/app/components/designer/components/designer.component.html
@@ -10,58 +10,15 @@
 
 
 
+                <designer-navigation></designer-navigation>
 
 
-
-                <ul class="coreui-sidebar-favourites">
-                    <li>
-                        <a href="/Designer">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-home fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Dashboard</div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/Designer/Blades">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-list fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Blades</div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="/Designer/Controls">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-bars fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Controls</div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="/Designer/Forms">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-ellipsis-h fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Forms</div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="/Designer/Models">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-ellipsis-h fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Models</div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="/Designer/Editors">
-                            <div class="coreui-sidebar-icon"><i class="fa fa-ellipsis-h fa-fw fa-lg"></i></div>
-                            <div class="coreui-sidebar-label">Editors</div>
-                        </a>
-                    </li>
-
-                </ul>
+              
             </div>
         </div>
 
         <div style="width: 100%; height: 100%; background: #fff; padding: 20px">
-
-            //BODY GOES HERE
+            
             <router-outlet></router-outlet>
 
 
